# openenclave

./: .binsignore  .check-license.ignore  .check-source.ignore  .clang-format  .cmake-format.json  .cspellignore  .cxx-check.ignore  .gitattributes  .gitignore  .gitmodules  0001-Update-API-reference-and-other-documents.patch  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  DOCKER_IMAGES.md  Jenkinsfile  LICENSE  LICENSE.3RDPARTY  Makefile  OWNERS  README.md  SECURITY.md  TECHNICAL_CHARTER.md  TEST  THIRD_PARTY_NOTICES  VERSION  azure-pipelines.yml  bors.toml  camel2snake.conf  camel2snake.cpp  camel2snake.sh  configure  libc-tests-logfile  todo.txt
3rdparty.bak/libcxxrt/: CMakeLists.txt  stubs.h
crypto/enclave/: CMakeLists.txt  cert.c  ec.c  keys.c  random.c  rsa.c  sha.c
crypto/host/: CMakeLists.txt  cert.c  ec.c  init.c  init.h  random.c  rsa.c  sha.c
debugger/: CMakeLists.txt  README.md  oe-gdb  oe-lldb  oegdb  oelldb
debugger/debugrt/: CMakeLists.txt  README.md
debugger/gdb-extension/: CMakeLists.txt  README.md  gdb_sgx_plugin.py  load_symbol_cmd.py  mprotect.py  readelf.py
debugger/gdbPythonExtension/: README.md
debugger/lldb-extension/: CMakeLists.txt  lldb_sgx_plugin.py
debugger/lldbPythonExtension/: CMakeLists.txt  README.md  lldb_sgx_plugin.py  readelf.py
debugger/ptraceLib/: CMakeLists.txt  README.md  contract.h  enclave_context.c  enclave_context.h  inferior_status.c  inferior_status.h  oe_ptrace.c  ptrace.c  sgxtypes.h
debugger/pythonExtension/: CMakeLists.txt  README.md  gdb_sgx_plugin.py  load_symbol_cmd.py  oe_constants.py  signal_handler.py
debugrt/host/: CMakeLists.txt  host.c
doc/refman/: CMakeLists.txt  Makefile  README.md  doxygen-howto.md  doxygen.conf
docs/refman/: CMakeLists.txt  MainPage.md  doc_mainpage.h  doxygen-howto.md  doxygen.conf  index.html
eal_host/: CMakeLists.txt  README.md  eal_host.c
elibc/: CMakeLists.txt  Makefile  README.md  abs.c  assert.c  atexit.c  ctype.c  ctype_toupper_loc.c  errno.c  gmtime.c  intstr.c  libcxxrt_stubs.c  libllvmcxx_stubs.c  link.c  longjmp.S  malloc.c  malloc_u.c  memcpy.c  memset.c  nanosleep_u.c  printf.c  pthread.c  rand.c  sbrk.c  signal.h  stdio.c  strerror.c  strftime_u.c  string.c  strtoul.c  time.c  toread.c  unistd.c  vfprintf.c  vsscanf.c  windows.c
elibc/attic/: lctrans.c  malloc.c
enclave/: CMakeLists.txt  Makefile  README.md  __secs_to_tm.c  abort.S  asmcommon.inc  asmdefs.h  asn1.c  assert.c  asym_keys.c  asym_keys.h  atexit.c  atexit.h  attest_plugin.c  base64.c  brk.c  calls.c  cert.c  cmac.c  cpuid.c  cpuid.h  crl.c  crl.h  crypto.c  crypto.h  ec.c  ec.h  ecdsa.c  enclave.ld  entropy.c  entropy.h  exception.c  exit.S  getkey.S  globals.c  gmtime.c  heap.c  hexdump.c  hmac.c  hostcalls.c  (+57 more)
enclave/alloc/: CMakeLists.txt  README.md  allocator.c
enclave/attestation/: CMakeLists.txt  README.md  attest_plugin.c  tls_cert.c
enclave/attic/: fortify.c  malloc.c  oemalloc.c  stdcxx.c
enclave/core/: CMakeLists.txt  README.md  __secs_to_tm.c  __stack_chk_fail.c  arena.c  arena.h  array.c  asmcommon.inc  asmdefs.h  assert.c  atexit.c  atexit.h  backtrace.c  calls.c  calls.h  chdir.c  core_t_wrapper.c  corelibc.c  cpuid.c  cpuid.h  ctype.c  cwd.c  debugmalloc.c  debugmalloc.h  debugmalloc_helper.h  device.c  (+84 more)
host/: CMakeLists.txt  Makefile  PlatformQuoteProvider.h  README.md  aep.S  aep.asm  aesm-linux.c  aesm-win.c  aesm.c  asmdefs.h  asym_keys.c  backtrace.c  backtrace_symbols.c  calls.c  calls.h  core_u_wrapper.c  cpuid.c  cpuid.h  cpuid_count.h  create.c  dupenv.c  dupenv.h  dynload.h  ecall_ids.c  ecall_ids.h  edger8r_prologue.h  elf.c  elfload.c  enclave.c  enclave.h  enclavemanager.c  enter.S  enter.asm  entersim.S  entersim.asm  error.c  exception.c  files.c  fopen.c  fopen.h  (+70 more)
idl/: CMakeLists.txt  Makefile  README  README.md  galloc.c  printstr.c  typeinfo.c
include/: CMakeLists.txt
libcxx/: CMakeLists.txt  Makefile  README.md
new_platforms/: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Makefile  OpenEnclave.sln  VerifyArmSdkInstalled.bat  VerifySgxSdkInstalled.bat  build_optee.sh  oe_sdk_rules.mk  oe_sub.mk  run_tests_aarch64.sh  sgx_error.h.patch  vssettings.props
openenclaverc/: CMakeLists.txt  openenclaverc.in
pkg-config/: CMakeLists.txt  README.md  oeenclave++.pc  oeenclave-clang++.pc  oeenclave-clang.pc  oeenclave-g++.pc  oeenclave-gcc.pc  oeenclave.pc  oehost-clang++.pc  oehost-clang.pc  oehost-g++.pc  oehost-gcc.pc  oehost.pc  openenclave.pc
pkgconfig/: CMakeLists.txt  README.md  oeenclave-clang++-lvi-cfg.pc  oeenclave-clang++.pc  oeenclave-clang-lvi-cfg.pc  oeenclave-clang.pc  oeenclave-g++-lvi-cfg.pc  oeenclave-g++.pc  oeenclave-gcc-lvi-cfg.pc  oeenclave-gcc.pc  oehost-clang++.pc  oehost-clang.pc  oehost-g++.pc  oehost-gcc.pc  oehostverify-clang++.pc  oehostverify-clang.pc  oehostverify-g++.pc  oehostverify-gcc.pc  oequote-clang++.pc  oequote-clang.pc  oequote-g++.pc  oequote-gcc.pc
posix/: '  CMakeLists.txt  README.md  console.c  consolefs.c  consolefs.h  device.c  device_ops.h  dirent.c  epoll.c  epoll.h  epollops.h  eventfd.c  eventfd.h  eventfd_device.c  eventfdops.h  exit.c  fcntl.c  fd.c  fd.h  fdtable.c  fs.c  hostepoll_device.c  hostfs_device.c  hostresolver_device.c  hostsock_device.c  ids.c  ioctl.c  iov.c  list.h  lock.c  mount.c  mount.h  netdb.c  poll.c  posix_t_wrapper.c  realpath.c  resolver.c  select.c  signal.c  (+9 more)
runtime/: CMakeLists.txt  README.md  random.c
samples/: BuildSamplesLinux.md  BuildSamplesWindows.md  CMakeLists.txt  Makefile  README  README.md  README_Linux.md  README_Windows.md  check_quote_provider.cmake  config.mk  run  test-samples.cmake  test-samples.sh
syscall/: CMakeLists.txt  README.md  consolefs.c  consolefs.h  device.c  dirent.c  epoll.c  fcntl.c  fdtable.c  hostcalls.c  ioctl.c  iov.c  mount.c  mount.h  netdb.c  poll.c  select.c  socket.c  stat.c  stdio.c  stdlib.c  stub.c  syscall.c  syscall_t_wrapper.c  unistd.c  utsname.c
tests/: CMakeLists.txt  Makefile  README.md
tools/: CMakeLists.txt  Makefile
wrap/: CMakeLists.txt  f_ops.c
(+7439 files in other folders)
